<resources>
    <string name="app_name">Praman</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="centimeter">Centimeter</string>
    <string name="meter">Meter</string>
    <string name="kilometre">Kilometre</string>
    <string name="inch">Inch</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="mile">Mile</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheite">Fahrenheite</string>
    <string name="kelvin">Kelvin</string>
    <string name="milligram">Milligram</string>
    <string name="grams">Grams</string>
    <string name="kilograms">Kilograms</string>
    <string name="ounce">Ounce</string>
    <string name="pound">Pound</string>
    <string name="convert">Convert</string>
    <string name="enter_centimeters">Enter Centimeters</string>
    <string name="answer">Answer</string>
    <string name="enter_meters">Enter Meters</string>
    <string name="enter_kilometers">Enter Kilometers</string>
    <string name="enter_inches">Enter Inches</string>
    <string name="enter_yards">Enter Yards</string>
    <string name="enter_foot">Enter Foot</string>
    <string name="enter_miles">Enter Miles</string>
    <string name="enter_celsius">Enter Celsius</string>
    <string name="enter_fahrenheite">Enter Fahrenheite</string>
    <string name="enter_kelvin">Enter Kelvin</string>
    <string name="enter_milligrams">Enter Milligrams</string>
    <string name="enter_grams">Enter Grams</string>
    <string name="enter_kilograms">Enter Kilograms</string>
    <string name="enter_ounces">Enter Ounces</string>
    <string name="enter_pounds">Enter Pounds</string>
</resources>